syntax = "proto3";

package com.tservice.proto;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service IdentifierService {
    rpc createIdentifier(CreateIdentifierProto) returns (IdentifierProto);
    rpc updateIdentifier(UpdateIdentifierProto) returns (IdentifierProto);
    rpc deleteIdentifier(DeleteIdentifierProto) returns (google.protobuf.Empty);
    rpc getIdentifierById(GetIdentifierByIdProto) returns (IdentifierProto);
    rpc getAllIdentifiers(GetAllIdentifiersProto) returns (stream IdentifierProto);
    rpc findIdentifiersByContextId(FindIdentifiersByContextIdProto) returns (stream IdentifierProto);
    rpc findIdentifiersByUserId(FindIdentifiersByUserIdProto) returns (stream IdentifierProto);
    rpc findIdentifiersByName(FindIdentifiersByNameProto) returns (stream IdentifierProto);
    rpc findIdentifiersByValue(FindIdentifiersByValueProto) returns (stream IdentifierProto);
}

message IdentifierProto {
    string identifierId = 1;
    string contextId = 2;
    string userId = 3;
    string name = 4;
    string value = 5;
}

message CreateIdentifierProto {
    string contextId = 2;
    string userId = 3;
    string name = 4;
    string value = 5;
}

message UpdateIdentifierProto {
    string identifierId = 1;
    string contextId = 2;
    string userId = 3;
    string name = 4;
    string value = 5;
}

message DeleteIdentifierProto {
    string identifierId = 1;
}

message GetIdentifierByIdProto {
    string identifierId = 1;
}

message GetAllIdentifiersProto {}

message FindIdentifiersByContextIdProto {
    string contextId = 1;
}

message FindIdentifiersByUserIdProto {
    string userId = 1;
}

message FindIdentifiersByNameProto {
    string name = 1;
}

message FindIdentifiersByValueProto {
    string value = 1;
}
